author_email = siddharths2710@yahoo.com
maintainer = Siddharth Srinivasan
maintainer_email = siddharths2710@yahoo.com

version = 0.1.0

description = sec-vault
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sec-vault, password manager, cryptography, security

platforms = Linux, MacOS X, Windows

url = git@github.com:siddharths2710/sec-vault.git
download_url = git@github.com:siddharths2710/sec-vault.git

license = GPL v3

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 7 - Inactive
    Environment :: Console
    Intended Audience :: Anyone
    License :: OSI Approved :: GPLv3 License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security/Engineering :: Cryptography
    Topic :: Cybersecurity
    Topic :: Utilities

[options]
zip_safe = false
packages = find:
python_requires = >= 3.0

[options.entry_points]
console_scripts =
    sec-vault = sec-vault.cli:entry_point

[upload_docs]
upload-dir = docs/_build/html

[tool:pytest]
addopts = --doctest-modules --cov=./sec-vault --cov-report html:tests/reports/coverage-html --cov-report term-missing --flake8 --ignore=docs/ --durations=3
doctest_encoding = utf-8

[pydocstyle]
ignore = D104, D413, D212, D100
match_dir = sec-vault

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
ignore_missing_imports = True