[metadata]
name = sec-vault

author_email = siddharths2710@yahoo.com
maintainer = Siddharth Srinivasan
maintainer_email = siddharths2710@yahoo.com

version = 0.0.1

description = sec-vault
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sec-vault, password manager, cryptography, security

platforms = Linux, MacOS X, Windows

home_page = https://github.com/siddharths2710/sec-vault
project_urls:
    issue_tracker = https://github.com/siddharths2710/sec-vault/issues
    download_url = https://github.com/siddharths2710/sec-vault

license = GNU Lesser General Public License v3

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Security :: Cryptography
    Topic :: Utilities

[options]
zip_safe = false
package_dir = 
	= sec_vault
packages = core, ciphers
python_requires = >= 3.6

[options.packages.find]
where = sec_vault
exclude = sec_vault/tests, sec_vault/ciphers/tests

[options.entry_points]
console_scripts =
    sec-vault = sec_vault:main

#[upload_docs]
#upload-dir = docs/_build/html

#[tool:pytest]
#addopts = --doctest-modules --cov=./sec-vault --cov-report html:tests/reports/coverage-html --cov-report term-missing --flake8 --ignore=docs/ --durations=3
#doctest_encoding = utf-8

#[pydocstyle]
#ignore = D104, D413, D212, D100
#match_dir = sec-vault

#[flake8]
#max-line-length = 88
#extend-ignore = E203

[mypy]
ignore_missing_imports = True
